--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10.0)
 
 project(DHModel VERSION 1.0)
 
+set(CMAKE_CXX_STANDARD 14)
+
 list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/installed_dependencies")
 add_subdirectory(dhmodel)
 
